--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -65,6 +65,9 @@
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
+    <Reference Include="ResponsiveGrid.Wpf, Version=0.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ResponsiveGrid.0.3.3\lib\net45\ResponsiveGrid.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="ShowMeTheXAML, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ShowMeTheXAML.1.0.12\lib\net45\ShowMeTheXAML.dll</HintPath>
     </Reference>
@@ -99,7 +102,36 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Program\Login.xaml">
+    <Page Include="Classes\View\BuyerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Classes\View\InvoiceWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\Login.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\OrderAdd.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\PlannerHome.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\PlannerInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\PlannerWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\ShippingInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,23 +139,59 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DBConnect\Configs.cs" />
-    <Compile Include="DBConnect\DBHandler.cs" />
-    <Compile Include="Program\Login.xaml.cs">
+    <Compile Include="Classes\Model\Admin.cs" />
+    <Compile Include="Classes\Model\Billing.cs" />
+    <Compile Include="Classes\Model\Buyer.cs" />
+    <Compile Include="Classes\Model\Carrier.cs" />
+    <Compile Include="Classes\Model\City.cs" />
+    <Compile Include="Classes\Model\Contract.cs" />
+    <Compile Include="Classes\Model\ContractMarketPlace.cs" />
+    <Compile Include="Classes\Model\Customer.cs" />
+    <Compile Include="Classes\Model\Employee.cs" />
+    <Compile Include="Classes\Model\Invoice.cs" />
+    <Compile Include="Classes\Model\Order.cs" />
+    <Compile Include="Classes\Model\PlanInfo.cs" />
+    <Compile Include="Classes\Model\Planner.cs" />
+    <Compile Include="Classes\Model\Trip.cs" />
+    <Compile Include="Classes\Controller\BillingBizDAO.cs" />
+    <Compile Include="Classes\Controller\BizCommon.cs" />
+    <Compile Include="Classes\Controller\BizDAO.cs" />
+    <Compile Include="Classes\Controller\CarrierBizDAO.cs" />
+    <Compile Include="Classes\Controller\CityBizDAO.cs" />
+    <Compile Include="Classes\Controller\CMPBizDAO.cs" />
+    <Compile Include="Classes\Controller\ContractBizDAO.cs" />
+    <Compile Include="Classes\Controller\CustomerBizDAO.cs" />
+    <Compile Include="Classes\Controller\EmployeeBizDAO.cs" />
+    <Compile Include="Classes\Controller\InvoiceBizDAO.cs" />
+    <Compile Include="Classes\Controller\OrderBizDAO.cs" />
+    <Compile Include="Classes\Controller\PlanInfoBizDAO.cs" />
+    <Compile Include="Classes\Controller\TripBizDAO.cs" />
+    <Compile Include="Classes\View\BuyerWindow.xaml.cs">
+      <DependentUpon>BuyerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\InvoiceWindow.xaml.cs">
+      <DependentUpon>InvoiceWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Page Include="Program\OrderAdd.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Program\PlannerHome.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Program\PlannerWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="Classes\View\OrderAdd.xaml.cs">
+      <DependentUpon>OrderAdd.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\PlannerHome.xaml.cs">
+      <DependentUpon>PlannerHome.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\PlannerInfo.xaml.cs">
+      <DependentUpon>PlannerInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\PlannerWindow.xaml.cs">
+      <DependentUpon>PlannerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\ShippingInfo.xaml.cs">
+      <DependentUpon>ShippingInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DBConnect\Configs.cs" />
+    <Compile Include="DBConnect\DBHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program\OrderAdd.xaml.cs">
