Add splash screen and exit button for Buyer

--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -224,6 +224,8 @@
   <ItemGroup>
     <Resource Include="Resource\home.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resource\splashscreen.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
