--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -139,6 +139,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controller\AdminBizDAO.cs" />
+    <Compile Include="Classes\Controller\BuyerBizDAO.cs" />
+    <Compile Include="Classes\Controller\GlobalSeq.cs" />
+    <Compile Include="Classes\Controller\LoginBizDAO.cs" />
+    <Compile Include="Classes\Controller\PlannerBizDAO.cs" />
     <Compile Include="Classes\Model\Admin.cs" />
     <Compile Include="Classes\Model\Billing.cs" />
     <Compile Include="Classes\Model\Buyer.cs" />
@@ -224,6 +229,8 @@
   <ItemGroup>
     <Resource Include="Resource\home.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resource\splashscreen.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
