--- a/TMSProject/TDD_TMS/packages.config
+++ b/TMSProject/TDD_TMS/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="MahApps.Metro" version="1.6.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes.MahApps" version="0.1.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.18" targetFramework="net472" />
