--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -106,6 +106,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Classes\View\CMPWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Classes\View\InvoiceWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -142,7 +146,6 @@
     <Compile Include="Classes\Controller\AdminBizDAO.cs" />
     <Compile Include="Classes\Controller\BuyerBizDAO.cs" />
     <Compile Include="Classes\Controller\GlobalSeq.cs" />
-    <Compile Include="Classes\Controller\LoginBizDAO.cs" />
     <Compile Include="Classes\Controller\PlannerBizDAO.cs" />
     <Compile Include="Classes\Model\Admin.cs" />
     <Compile Include="Classes\Model\Billing.cs" />
@@ -174,6 +177,9 @@
     <Compile Include="Classes\View\BuyerWindow.xaml.cs">
       <DependentUpon>BuyerWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\View\CMPWindow.xaml.cs">
+      <DependentUpon>CMPWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\View\InvoiceWindow.xaml.cs">
       <DependentUpon>InvoiceWindow.xaml</DependentUpon>
     </Compile>
@@ -195,6 +201,7 @@
     <Compile Include="Classes\View\ShippingInfo.xaml.cs">
       <DependentUpon>ShippingInfo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DBConnect\CMPConfigs.cs" />
     <Compile Include="DBConnect\Configs.cs" />
     <Compile Include="DBConnect\DBHandler.cs" />
   </ItemGroup>
