--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -102,6 +102,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Classes\View\BillingAndPlanning.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Classes\View\BuyerWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -121,6 +125,10 @@
     <Page Include="Classes\View\OrderAdd.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\OrderDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Classes\View\PlannerHome.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -146,6 +154,8 @@
     <Compile Include="Classes\Controller\AdminBizDAO.cs" />
     <Compile Include="Classes\Controller\BuyerBizDAO.cs" />
     <Compile Include="Classes\Controller\GlobalSeq.cs" />
+    <Compile Include="Classes\Controller\LoginBizDAO.cs" />
+    <Compile Include="Classes\Controller\MileageBizDAO.cs" />
     <Compile Include="Classes\Controller\PlannerBizDAO.cs" />
     <Compile Include="Classes\Model\Admin.cs" />
     <Compile Include="Classes\Model\Billing.cs" />
@@ -155,11 +165,14 @@
     <Compile Include="Classes\Model\Contract.cs" />
     <Compile Include="Classes\Model\ContractMarketPlace.cs" />
     <Compile Include="Classes\Model\Customer.cs" />
+    <Compile Include="Classes\Model\DataGridRoute.cs" />
     <Compile Include="Classes\Model\Employee.cs" />
     <Compile Include="Classes\Model\Invoice.cs" />
+    <Compile Include="Classes\Model\Mileage.cs" />
     <Compile Include="Classes\Model\Order.cs" />
     <Compile Include="Classes\Model\PlanInfo.cs" />
     <Compile Include="Classes\Model\Planner.cs" />
+    <Compile Include="Classes\Model\DataGridTrips.cs" />
     <Compile Include="Classes\Model\Trip.cs" />
     <Compile Include="Classes\Controller\BillingBizDAO.cs" />
     <Compile Include="Classes\Controller\BizCommon.cs" />
@@ -174,6 +187,9 @@
     <Compile Include="Classes\Controller\OrderBizDAO.cs" />
     <Compile Include="Classes\Controller\PlanInfoBizDAO.cs" />
     <Compile Include="Classes\Controller\TripBizDAO.cs" />
+    <Compile Include="Classes\View\BillingAndPlanning.xaml.cs">
+      <DependentUpon>BillingAndPlanning.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\View\BuyerWindow.xaml.cs">
       <DependentUpon>BuyerWindow.xaml</DependentUpon>
     </Compile>
@@ -189,6 +205,9 @@
     <Compile Include="Classes\View\OrderAdd.xaml.cs">
       <DependentUpon>OrderAdd.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\View\OrderDetail.xaml.cs">
+      <DependentUpon>OrderDetail.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\View\PlannerHome.xaml.cs">
       <DependentUpon>PlannerHome.xaml</DependentUpon>
     </Compile>
@@ -201,9 +220,23 @@
     <Compile Include="Classes\View\ShippingInfo.xaml.cs">
       <DependentUpon>ShippingInfo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\View\Test.xaml.cs">
+      <DependentUpon>Test.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\UserControl1.xaml.cs">
+      <DependentUpon>UserControl1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DBConnect\CMPConfigs.cs" />
     <Compile Include="DBConnect\Configs.cs" />
     <Compile Include="DBConnect\DBHandler.cs" />
+    <Page Include="Classes\View\Test.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Classes\View\UserControl1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
