--- a/TMSProject/TMSProject/packages.config
+++ b/TMSProject/TMSProject/packages.config
@@ -1,15 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.10.0" targetFramework="net472" />
+  <package id="ControlzEx" version="4.2.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.11.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
-  <package id="MahApps.Metro" version="1.6.0" targetFramework="net472" />
-  <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
-  <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
-  <package id="MaterialDesignThemes.MahApps" version="0.1.0" targetFramework="net472" />
+  <package id="MahApps.Metro" version="2.0.0-alpha0660" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.1-ci848" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="3.0.0-ci848" targetFramework="net472" />
+  <package id="MaterialDesignThemes.MahApps" version="0.1.1-ci848" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.18" targetFramework="net472" />
   <package id="ResponsiveGrid" version="0.3.3" targetFramework="net472" />
-  <package id="ShowMeTheXAML" version="1.0.12" targetFramework="net472" />
+  <package id="ShowMeTheXAML" version="1.1.0-ci71" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
 </packages>
