logging add for log4net

--- a/TMSProject/TMSProject/App.config
+++ b/TMSProject/TMSProject/App.config
@@ -1,18 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net"
+    type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="%property{LogFileName}.log" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="100" />
+      <rollingStyle value="Size" />
+
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date - %message-%newline" />
+      </layout>
+    </appender>
+
+    <logger name="SampleAppender">
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
+    </logger>
+  </log4net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.10.0.0" newVersion="3.10.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.5.0" newVersion="1.8.5.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
