--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -106,10 +106,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Classes\View\CMPWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Classes\View\InvoiceWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -121,6 +117,10 @@
     <Page Include="Classes\View\OrderAdd.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\View\OrderDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Classes\View\PlannerHome.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -146,6 +146,8 @@
     <Compile Include="Classes\Controller\AdminBizDAO.cs" />
     <Compile Include="Classes\Controller\BuyerBizDAO.cs" />
     <Compile Include="Classes\Controller\GlobalSeq.cs" />
+    <Compile Include="Classes\Controller\LoginBizDAO.cs" />
+    <Compile Include="Classes\Controller\MileageBizDAO.cs" />
     <Compile Include="Classes\Controller\PlannerBizDAO.cs" />
     <Compile Include="Classes\Model\Admin.cs" />
     <Compile Include="Classes\Model\Billing.cs" />
@@ -155,11 +157,15 @@
     <Compile Include="Classes\Model\Contract.cs" />
     <Compile Include="Classes\Model\ContractMarketPlace.cs" />
     <Compile Include="Classes\Model\Customer.cs" />
+    <Compile Include="Classes\Model\DataGridCarrier.cs" />
+    <Compile Include="Classes\Model\DataGridRoute.cs" />
     <Compile Include="Classes\Model\Employee.cs" />
     <Compile Include="Classes\Model\Invoice.cs" />
+    <Compile Include="Classes\Model\Mileage.cs" />
     <Compile Include="Classes\Model\Order.cs" />
     <Compile Include="Classes\Model\PlanInfo.cs" />
     <Compile Include="Classes\Model\Planner.cs" />
+    <Compile Include="Classes\Model\DataGridTrips.cs" />
     <Compile Include="Classes\Model\Trip.cs" />
     <Compile Include="Classes\Controller\BillingBizDAO.cs" />
     <Compile Include="Classes\Controller\BizCommon.cs" />
@@ -177,9 +183,6 @@
     <Compile Include="Classes\View\BuyerWindow.xaml.cs">
       <DependentUpon>BuyerWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Classes\View\CMPWindow.xaml.cs">
-      <DependentUpon>CMPWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Classes\View\InvoiceWindow.xaml.cs">
       <DependentUpon>InvoiceWindow.xaml</DependentUpon>
     </Compile>
@@ -188,6 +191,9 @@
     </Compile>
     <Compile Include="Classes\View\OrderAdd.xaml.cs">
       <DependentUpon>OrderAdd.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\OrderDetail.xaml.cs">
+      <DependentUpon>OrderDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\View\PlannerHome.xaml.cs">
       <DependentUpon>PlannerHome.xaml</DependentUpon>
@@ -201,9 +207,15 @@
     <Compile Include="Classes\View\ShippingInfo.xaml.cs">
       <DependentUpon>ShippingInfo.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DBConnect\CMPConfigs.cs" />
+    <Compile Include="Classes\View\BillingAndPlanning.xaml.cs">
+      <DependentUpon>BillingAndPlanning.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DBConnect\Configs.cs" />
     <Compile Include="DBConnect\DBHandler.cs" />
+    <Page Include="Classes\View\BillingAndPlanning.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
