--- a/TMSProject/TDD_TMS/TDD_TMS.csproj
+++ b/TMSProject/TDD_TMS/TDD_TMS.csproj
@@ -96,6 +96,7 @@
     <Compile Include="PlannerTestCase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
