--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -303,5 +303,8 @@
   <ItemGroup>
     <Resource Include="Resource\splashscreen.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="InvoicePrint\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
