--- a/TMSProject/TMSProject/App.config
+++ b/TMSProject/TMSProject/App.config
@@ -1,5 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net"
+        type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="%property{LogFileName}.log" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="100" />
+      <rollingStyle value="Size" />
+
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date - %message-%newline" />
+      </layout>
+    </appender>
+
+    <logger name="SampleAppender">
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
+    </logger>
+  </log4net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
