--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -125,6 +125,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Classes\View\InvoiceSummary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Classes\View\InvoiceWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -141,11 +145,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Classes\View\PlannerHome.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Classes\View\OrderSummary.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Classes\View\PlannerInfo.xaml">
+    <Page Include="Classes\View\PlannerHome.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -213,6 +217,9 @@
     <Compile Include="Classes\View\CMPWindow.xaml.cs">
       <DependentUpon>CMPWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\View\InvoiceSummary.xaml.cs">
+      <DependentUpon>InvoiceSummary.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\View\InvoiceWindow.xaml.cs">
       <DependentUpon>InvoiceWindow.xaml</DependentUpon>
     </Compile>
@@ -225,11 +232,11 @@
     <Compile Include="Classes\View\OrderDetail.xaml.cs">
       <DependentUpon>OrderDetail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\View\OrderSummary.xaml.cs">
+      <DependentUpon>OrderSummary.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\View\PlannerHome.xaml.cs">
       <DependentUpon>PlannerHome.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Classes\View\PlannerInfo.xaml.cs">
-      <DependentUpon>PlannerInfo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\View\PlannerWindow.xaml.cs">
       <DependentUpon>PlannerWindow.xaml</DependentUpon>
@@ -242,6 +249,9 @@
     </Compile>
     <Compile Include="Classes\View\TMSAlter.xaml.cs">
       <DependentUpon>TMSAlter.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\View\TripTracker.xaml.cs">
+      <DependentUpon>TripTracker.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\View\UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
@@ -257,6 +267,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Classes\View\TMSAlter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Classes\View\TripTracker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -302,9 +316,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resource\splashscreen.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="InvoicePrint\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
